Adds vertex and index buffer, staging queue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(motorino)
 
 find_package(Vulkan REQUIRED glslc)
 find_package(glfw3 CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 include(cmake/compiler_options.cmake)
 
@@ -14,11 +15,17 @@ set(motorino_sources
 )
 
 set(motorino_includes
+    include/nkgt/logger.hpp
     include/nkgt/renderer.hpp
 )
 
 add_library(motorino STATIC ${motorino_sources} ${motorino_includes})
-target_link_libraries(motorino PUBLIC Vulkan::Vulkan glfw)
+target_link_libraries(
+    motorino
+    PRIVATE Vulkan::Vulkan
+            glfw
+            fmt::fmt
+)
 target_include_directories(motorino PUBLIC include)
 set_compiler_options(motorino)
 
